<resources>
    <string name="app_name" translatable="false">Group Manager</string>
    <string name="text_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password</string>
    <string name="button_login">Login</string>
    <string name="login_with_phone">Login with phone</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="register_with_phone">Register with phone</string>
    <string name="register_with_google">Register with Google</string>
    <string name="button_login_description">Sign in with your account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_find_friends">Find Friends</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="update">Update</string>
    <string name="cd_user_profile_image">User profile image</string>
    <string name="please_provide_a_username">Please, provide a username</string>
    <string name="please_provide_a_status">Please, provide a status</string>
    <string name="profile_updated">Profile updated</string>
    <string name="please_provide_some_information_about_your_profile">Please, provide some information about your profile</string>
    <string name="create_group">Create group</string>
    <string name="name_of_the_group">Name of the group</string>
    <string name="enter_group_details">Enter group details: </string>
    <string name="group_is_created">group is created</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="cd_send_message">Send message</string>
    <string name="message_ignore_lots_of_spaces">Message</string>
    <string name="cd_group_profile_image">Group profile image</string>
    <string name="phone_number">Phone number</string>
    <string name="code">Code</string>
    <string name="next">Next</string>
    <string name="please_enter_a_country_code">Please enter a country code</string>
    <string name="please_enter_a_phone_number">Please enter a phone number</string>
    <string name="we_have_sent_an_sms_with_an_activation_code_to_your_phone">We have sent an SMS with an activation code to your phone:</string>
    <string name="enter_code">Enter code</string>
    <string name="invalid_phone_number_please_check_if_the_country_code_or_the_phone_number_you_have_provided_are_correct">Invalid phone number. Please check if the country code or the phone number you have provided are correct</string>
    <string name="the_notification_has_been_sent">The notification has been sent</string>
    <string name="please_enter_an_activation_code">Please enter an activation code</string>
    <string name="phone_verification">Phone verification</string>
    <string name="sending_verification_code">Sending verification code…</string>
    <string name="code_verification">Code verification</string>
    <string name="verifying_the_verification_code">Verifying the verification code…</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="please_provide_a_name_for_the_group">Please, provide a name for the group</string>
    <string name="permission_denied">Permission denied</string>
    <string name="user_profile_image">User profile image</string>
    <string name="send_message">Send message</string>
    <string name="cancel_chat_request">Cancel chat request</string>
    <string name="decline_chat_request">Decline chat request</string>
    <string name="accept_chat_request">Accept chat request</string>
    <string name="remove_this_contact">Remove this contact</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login now!</string>
    <string name="contact_saved">Contact saved</string>
    <string name="chat_request_declined">Chat request declined</string>
    <string name="last_seen_at">Last seen at </string>
    <string name="tabs">Tabs</string>
    <string name="search">Search</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="attach_a_file">Attach a file</string>
    <string name="receiver_image">Receiver image</string>
    <string name="last_seen_on">Last seen on</string>
    <string name="last_seen_yesterday_at">Last seen yesterday at</string>
    <string name="file">File</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete message?</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="back_button">Back button</string>
    <string name="image">Image</string>
    <string name="go_back">Go back</string>
    <string name="download_the_image">Download the image</string>
    <string name="at">at</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="card_is_scrollable">Card is scrollable</string>
    <string name="delete_friend">Delete friend</string>
    <string name="delete_contact_alert_dialog">Delete Contact?</string>
    <string name="delete_contact">Delete contact</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you want to delete "</string>
    <string name="from_the_chat_list">" from the chat list?"</string>
    <string name="oops_no_connection">Oops, No Connection</string>
    <string name="sit_tight_updates_will_auto_appear_once_back_online">Sit tight. Updates will auto-appear once back online.</string>
    <string name="simplifying_chats_connecting_groups">Simplifying chats, connecting groups.</string>
    <string name="app_icon">App icon</string>
    <string name="start_messaging">Start messaging</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_to_sign_up">Swipe to sign up</string>
    <string name="swipe_to_login">Swipe to login</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="repeat_password">Repeat password</string>
    <string name="more_options">More options</string>
    <string name="clear">Clear</string>
    <string name="clear_chat_history_confirmation">Are you sure you want to clear the chat history?</string>

</resources>