<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity">

    <LinearLayout
        android:id="@+id/ll_phone_login_p1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">
        <!-- Nested LinearLayout for EditText views -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_phone_country_code"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="postalCode"
                android:hint="@string/code"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:autofillHints="phone"
                android:hint="@string/phone_number"

                android:inputType="phone"
                android:padding="10dp"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_next_send_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/button_next"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
    <!--    -->
    <LinearLayout
        android:id="@+id/ll_phone_login_p2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_code"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/we_have_sent_an_sms_with_an_activation_code_to_your_phone"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_activation_code"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="18dp"
            android:autofillHints="postalCode"
            android:hint="******"
            android:inputType="number"
            android:letterSpacing="2"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btn_register_with_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/button_next"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</RelativeLayout>
