<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <!-- TODO: remove the tools:ignore-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/fully_rounded_corners_empty"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="36sp"
                        android:textStyle="bold" />
                    <!--                        280dp-->
                    <EditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/fully_rounded_corners_empty"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="4dp"
                        android:autofillHints="password"
                        android:background="@drawable/fully_rounded_corners_empty"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_reset_password_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/reset_password"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/fully_rounded_corners_empty"
                        android:backgroundTint="@color/colorPrimary"
                        android:contentDescription="@string/button_login_description"
                        android:letterSpacing=".05"
                        android:text="@string/text_login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="14sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/tv_login_has_account_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_google_login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/fully_rounded_corners_empty"
                android:drawableStart="@drawable/ic_google"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/login_with_google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_phone_login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/fully_rounded_corners_full"
                android:drawableStart="@drawable/ic_phone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/login_with_phone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>